--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@dcc-bs/common-ui.bs.js",
     "version": "1.0.3",
-    "description": "Contains a Command bus for handling commands",
+    "description": "Common Nuxt components and UI utilts",
     "license": "MIT",
     "type": "module",
     "publishConfig": {
