--- a/package.json
+++ b/package.json
@@ -40,16 +40,20 @@
         "@nuxt/eslint-config": "^1.0.1",
         "@nuxt/module-builder": "^0.8.4",
         "@nuxt/schema": "^3.15.4",
-        "@nuxt/test-utils": "^3.15.4",
+        "@nuxt/test-utils": "^3.17.0",
         "@nuxt/ui": "2.21.0",
         "@types/node": "latest",
         "@vitest/coverage-v8": "^3.0.6",
+        "@vue/test-utils": "^2.4.6",
         "changelogen": "^0.5.7",
         "eslint": "^9.20.1",
+        "happy-dom": "^17.1.1",
         "nuxt": "^3.15.4",
+        "playwright-core": "^1.50.1",
         "publish-to-git": "^1.2.0",
         "typescript": "~5.7.3",
         "vitest": "^3.0.6",
+        "vitest-environment-nuxt": "^1.0.1",
         "vue-tsc": "^2.2.0"
     }
 }
