--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@dcc-bs/common-ui.bs.js",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "description": "Common Nuxt components and UI utilts",
     "license": "MIT",
     "type": "module",
@@ -25,7 +25,7 @@
         "dev": "nuxi dev playground",
         "dev:build": "nuxi build playground",
         "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-        "release": "bun lint && bun test && bun prepack && changelogen --release && git push --follow-tags",
+        "release": "bun lint && bun run test && bun prepack && changelogen --release && git push --follow-tags",
         "lint": "eslint .",
         "test": "vitest run",
         "test:watch": "vitest watch",
