--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,17 @@
 name: Publish Package to GitHub
 
 on:
-  release:
-    types: [created]
   workflow_dispatch:
+    inputs:
+      version_type:
+        description: 'Version increment type'
+        required: true
+        default: 'patch'
+        type: choice
+        options:
+          - patch
+          - minor
+          - major
 
 permissions:
   contents: read
@@ -23,6 +31,11 @@ jobs:
       - run: bun install
       - run: bun generate
       - run: bun run test
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      # Dynamic version increment based on input or default to patch
+      - name: Update version
+        run: npm version ${{ github.event.inputs.version_type || 'patch' }} --no-git-tag-version
+      
+      # Execute release script
+      - name: Run release script
+        run: bash .github/workflows/release.sh
