--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish Package to GitHub
+name: Publish Package to Github
 
 on:
   workflow_dispatch:
@@ -14,11 +14,11 @@ on:
           - major
 
 permissions:
-  contents: read
-  packages: write
+  contents: write
 
 jobs:
   build:
+    name: ${{ github.event.inputs.version_type }} Version
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
