--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,13 +18,13 @@ permissions:
 
 jobs:
   build:
-    name: ${{ github.event.inputs.version_type }} Version
+    name: Update to next ${{ github.event.inputs.version_type }} Version
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: actions/setup-node@v3
         with:
-          node-version: "22.x"
+          node-version: "20.x"
           registry-url: "https://npm.pkg.github.com"
       - name: Install Bun
         run: npm install -g bun
@@ -37,6 +37,18 @@ jobs:
       - name: Update version
         run: npm version ${{ github.event.inputs.version_type || 'patch' }} --no-git-tag-version
       
+      - name: Configure git
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+
+      # Commit the updated package.json version
+      - name: Commit version update
+        run: |
+          git add package.json
+          git commit -m "build: bump version to $(node -p "require('./package.json').version")"
+          git push
+
       # Execute release script
       - name: Run release script
         run: bash .github/workflows/release.sh
