feat: update dependencies and improve styling in components

--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
         "@nuxt/eslint-config": "^1.0.1",
         "@nuxt/module-builder": "^1.0.0",
         "@nuxt/schema": "^3.15.4",
+        "@nuxtjs/tailwindcss": "^6.0.14",
         "@nuxt/test-utils": "^3.17.0",
-        "@nuxt/ui": "2.22.0",
         "@types/node": "latest",
         "@vitest/coverage-v8": "^3.0.6",
         "@vue/test-utils": "^2.4.6",
