--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
         "tailwind-merge": "^3.0.1"
     },
     "devDependencies": {
+        "@biomejs/biome": "^2.1.2",
         "@nuxt/devtools": "^2.0.0",
         "@nuxt/eslint-config": "^1.0.1",
         "@nuxt/module-builder": "^1.0.0",
         "@nuxt/schema": "^4.0.0",
-        "@nuxtjs/tailwindcss": "^6.0.14",
         "@nuxt/test-utils": "^3.17.0",
+        "@nuxtjs/tailwindcss": "^6.0.14",
         "@types/node": "latest",
         "@vitest/coverage-v8": "^3.0.6",
         "@vue/test-utils": "^2.4.6",
