--- a/package.json
+++ b/package.json
@@ -30,29 +30,29 @@
         "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
     },
     "dependencies": {
-        "@nuxt/kit": "^4.0.0",
-        "tailwind-merge": "^3.0.1"
+        "@nuxt/kit": "^4.0.1",
+        "tailwind-merge": "^3.3.1"
     },
     "devDependencies": {
         "@biomejs/biome": "^2.1.2",
-        "@nuxt/devtools": "^2.0.0",
-        "@nuxt/eslint-config": "^1.0.1",
-        "@nuxt/module-builder": "^1.0.0",
-        "@nuxt/schema": "^4.0.0",
-        "@nuxt/test-utils": "^3.17.0",
-        "@nuxtjs/tailwindcss": "^6.0.14",
-        "@types/node": "latest",
-        "@vitest/coverage-v8": "^3.0.6",
+        "@nuxt/devtools": "^2.6.2",
+        "@nuxt/eslint-config": "^1.7.1",
+        "@nuxt/module-builder": "^1.0.2",
+        "@nuxt/schema": "^4.0.1",
+        "@nuxt/test-utils": "^3.19.2",
+        "@nuxtjs/tailwindcss": "^6.14.0",
+        "@types/node": "^24.1.0",
+        "@vitest/coverage-v8": "^3.2.4",
         "@vue/test-utils": "^2.4.6",
-        "changelogen": "^0.6.0",
-        "eslint": "^9.20.1",
-        "happy-dom": "^18.0.0",
-        "nuxt": "^4.0.0",
-        "playwright-core": "^1.50.1",
+        "changelogen": "^0.6.2",
+        "eslint": "^9.32.0",
+        "happy-dom": "^18.0.1",
+        "nuxt": "^4.0.1",
+        "playwright-core": "^1.54.1",
         "publish-to-git": "^1.2.0",
-        "typescript": "~5.8.0",
-        "vitest": "^3.0.6",
+        "typescript": "~5.8.3",
+        "vitest": "^3.2.4",
         "vitest-environment-nuxt": "^1.0.1",
-        "vue-tsc": "^3.0.0"
+        "vue-tsc": "^3.0.4"
     }
 }
