--- a/playground/package.json
+++ b/playground/package.json
@@ -8,6 +8,7 @@
         "generate": "nuxi generate"
     },
     "dependencies": {
+        "@nuxtjs/tailwindcss": "^6.14.0",
         "nuxt": "^4.0.0"
     }
 }
