--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
         "release": "bun lint && bun run test && bun prepack && changelogen --release && git push --follow-tags",
         "lint": "eslint .",
         "test": "vitest run",
-        "test:watch": "vitest watch",
-        "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
+        "test:watch": "vitest watch"
     },
     "dependencies": {
         "@nuxt/kit": "^4.0.1",
@@ -43,7 +42,6 @@
         "@nuxtjs/tailwindcss": "^6.14.0",
         "@types/node": "^24.1.0",
         "@vitest/coverage-v8": "^3.2.4",
-        "@vue/test-utils": "^2.4.6",
         "changelogen": "^0.6.2",
         "eslint": "^9.32.0",
         "happy-dom": "^18.0.1",
@@ -52,7 +50,6 @@
         "publish-to-git": "^1.2.0",
         "typescript": "~5.8.3",
         "vitest": "^3.2.4",
-        "vitest-environment-nuxt": "^1.0.1",
-        "vue-tsc": "^3.0.4"
+        "vitest-environment-nuxt": "^1.0.1"
     }
 }
