--- a/renovate.json
+++ b/renovate.json
@@ -1,26 +1,33 @@
 {
-    "forkProcessing": "enabled",
-    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "extends": ["config:recommended"],
-    "lockFileMaintenance": {
-        "enabled": true,
-        "automerge": true
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "dependencyDashboard": true,
+  "ignoreTests": true,
+  "extends": [
+    "config:recommended",
+    ":prImmediately"
+  ],
+  "packageRules": [
+    {
+      "matchDepTypes": [
+        "devDependencies"
+      ],
+      "matchPackageNames": [
+        "lint",
+        "prettier"
+      ],
+      "automerge": true
     },
-    "packageRules": [
-        {
-            "matchDepTypes": ["devDependencies"],
-            "matchPackageNames": ["lint", "prettier"],
-            "automerge": true
-        },
-        {
-            "matchUpdateTypes": ["minor", "patch"],
-            "matchCurrentVersion": "!/^0/",
-            "automerge": true
-        }
-    ],
-    "timezone": "Europe/Zurich",
-    "platformAutomerge": true,
-    "dependencyDashboard": true,
-    "ignoreTests": true,
-    "prCreation": "immediate"
+    {
+      "matchUpdateTypes": [
+        "minor",
+        "patch"
+      ],
+      "matchCurrentVersion": "!/^0/",
+      "automerge": true
+    }
+  ],
+  "lockFileMaintenance": {
+    "enabled": true,
+    "automerge": true
+  }
 }
