--- a/package.json
+++ b/package.json
@@ -1,55 +1,41 @@
 {
     "name": "@dcc-bs/common-ui.bs.js",
-    "version": "0.4.15",
-    "description": "Common Nuxt components and UI utilts",
-    "license": "MIT",
+    "module": "dist/common-ui.bs.js.js",
+    "main": "dist/common-ui.bs.js.umd.cjs",
+    "types": "src/index.ts",
     "type": "module",
-    "publishConfig": {
-        "registry": "https://npm.pkg.github.com/"
-    },
     "exports": {
         ".": {
-            "types": "./dist/types.d.mts",
-            "import": "./dist/module.mjs"
+            "types": "./src/index.ts",
+            "style": "./dist/common-ui.bs.js.css",
+            "import": "./dist/common-ui.bs.js.js",
+            "require": "./dist/common-ui.bs.js.umd.cjs"
         }
     },
-    "main": "./dist/module.mjs",
-    "files": [
-        "dist"
-    ],
     "scripts": {
-        "prepack": "nuxt-module-build build",
-        "generate": "nuxi generate",
-        "dev": "nuxi dev playground",
-        "dev:build": "nuxi build playground",
-        "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-        "release": "bun lint && bun run test && bun prepack && changelogen --release && git push --follow-tags",
-        "lint": "eslint .",
-        "test": "vitest run",
-        "test:watch": "vitest watch"
+        "dev": "cd playground && bun run dev",
+        "build": "vite build",
+        "check": "biome check --write",
+        "build:playground": "cd playground && bun run build",
+        "install:playground": "cd playground && bun install"
+    },
+    "workspaces": [
+        "playground"
+    ],
+    "devDependencies": {
+        "@biomejs/biome": "2.1.3",
+        "@tailwindcss/vite": "^4.1.11",
+        "@types/bun": "latest",
+        "@vitejs/plugin-vue": "^6.0.1",
+        "tailwindcss": "^4.1.11",
+        "vite": "^7.0.6"
+    },
+    "peerDependencies": {
+        "@nuxt/ui": "^3.3.0",
+        "nuxt": "^4.0.3",
+        "typescript": "^5"
     },
     "dependencies": {
-        "@nuxt/kit": "^4.0.1",
-        "tailwind-merge": "^3.3.1"
-    },
-    "devDependencies": {
-        "@biomejs/biome": "^2.1.2",
-        "@nuxt/devtools": "^2.6.2",
-        "@nuxt/eslint-config": "^1.7.1",
-        "@nuxt/module-builder": "^1.0.2",
-        "@nuxt/schema": "^4.0.1",
-        "@nuxt/test-utils": "^3.19.2",
-        "@nuxtjs/tailwindcss": "^6.14.0",
-        "@types/node": "^24.1.0",
-        "@vitest/coverage-v8": "^3.2.4",
-        "changelogen": "^0.6.2",
-        "eslint": "^9.32.0",
-        "happy-dom": "^18.0.1",
-        "nuxt": "^4.0.1",
-        "playwright-core": "^1.54.1",
-        "publish-to-git": "^1.2.0",
-        "typescript": "~5.9.0",
-        "vitest": "^3.2.4",
-        "vitest-environment-nuxt": "^1.0.1"
+        "motion-v": "^1.7.0"
     }
 }
