--- a/playground/package.json
+++ b/playground/package.json
@@ -1,14 +1,19 @@
 {
-    "private": true,
-    "name": "common-ui.bs.js-playground",
-    "type": "module",
-    "scripts": {
-        "dev": "nuxi dev",
-        "build": "nuxi build",
-        "generate": "nuxi generate"
-    },
+    "name": "nuxt-app",
     "dependencies": {
-        "@nuxtjs/tailwindcss": "^6.14.0",
-        "nuxt": "^4.0.1"
-    }
+        "@dcc-bs/common-ui.bs.js": "../",
+        "@nuxt/ui": "^3.3.0",
+        "nuxt": "^4.0.3",
+        "vue": "^3.5.18",
+        "vue-router": "^4.5.1"
+    },
+    "private": true,
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare"
+    },
+    "type": "module"
 }
