--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,13 @@
         "moduleResolution": "bundler",
         "allowImportingTsExtensions": true,
         "verbatimModuleSyntax": true,
-        "noEmit": true,
+        "noEmit": false,
+        
+        // Declaration files
+        "declaration": true,
+        "declarationMap": true,
+        "emitDeclarationOnly": true,
+        "outDir": "dist",
 
         // Best practices
         "strict": true,
@@ -25,5 +31,5 @@
         "noUnusedParameters": false,
         "noPropertyAccessFromIndexSignature": false
     },
-    "include": ["src/**/*", "src/types/global.d.ts"]
+    "include": ["src/**/*", "src/types/global.d.ts", "src/vue-shim.d.ts"]
 }
