feat: Add new components and styles for toggle switches, weekday percentage input, breadcrumbs, and pagination
- Implemented text toggle switch and toggle switch styles.
- Created weekday percentage input layout and styles.
- Added breadcrumbs component with hover effects.
- Developed container and page header styles for layout consistency.
- Introduced loading spinner animations and search result styling.
- Enhanced gallery and pagination components with responsive design.
- Updated typography styles for headings, links, and tables.
- Added utility classes for custom animations and z-index management.
- Integrated new Vue components for navigation and split container functionality.
- Configured Tailwind CSS with custom content and utility classes.

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "peerDependencies": {
         "@nuxt/ui": "^3.3.0",
         "nuxt": "^4.0.0",
-        "typescript": "^5"
+        "typescript": "^5",
+        "@nuxtjs/i18n": "latest"
     },
     "dependencies": {
         "motion-v": "^1.7.0"
