--- a/playground/package.json
+++ b/playground/package.json
@@ -3,6 +3,7 @@
     "dependencies": {
         "@dcc-bs/common-ui.bs.js": "../",
         "@nuxt/ui": "^3.3.0",
+        "@nuxtjs/i18n": "^10.1.0",
         "nuxt": "^4.0.3",
         "vue": "^3.5.18",
         "vue-router": "^4.5.1"
