--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
         "typescript": "^5.7.2",
         "vite": "^7.0.6",
         "vue": "^3.5.13",
-        "vue-tsc": "^3.0.0"
+        "vue-tsc": "3.0.8"
     },
     "peerDependencies": {
-        "@nuxt/ui": "^3.3.0",
+        "@nuxt/ui": "4.0.0",
         "nuxt": "^4.0.0",
         "typescript": "^5",
         "@nuxtjs/i18n": "latest"
