--- a/playground/package.json
+++ b/playground/package.json
@@ -2,7 +2,7 @@
     "name": "nuxt-app",
     "dependencies": {
         "@dcc-bs/common-ui.bs.js": "../",
-        "@nuxt/ui": "^3.3.0",
+        "@nuxt/ui": "4.0.0",
         "@nuxtjs/i18n": "^10.1.0",
         "nuxt": "^4.0.3",
         "vue": "^3.5.18",
