refactor: clean up CSS styles for various components and improve readability
- Updated toggle-switch styles for better structure and consistency.
- Refined weekday-percentage-input styles for clarity.
- Enhanced breadcrumbs and container styles for improved layout.
- Adjusted page-header styles for better responsiveness.
- Streamlined loading-spinner animations for smoother transitions.
- Simplified search-results styles for better emphasis on text.
- Improved pagination button styles for better user interaction.
- Refined typography styles for better text hierarchy and spacing.
- Updated tag styles for consistent appearance.
- Cleaned up data-bs-banner and navigation-bar component imports.
- Removed unnecessary whitespace in split-container component.
- Fixed JSON formatting in language files for consistency.
- Updated module.ts for cleaner imports and organization.
- Refined type definitions in TypeScript files for better clarity.
- Cleaned up tailwind configuration for better organization.
- Fixed missing newline in tsconfig.json for consistency.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,11 @@ jobs:
       - name: Install Bun
         run: npm install -g bun
       - run: bun install
-      - run: bun run build
-      - run: bun install:playground
-      - run: bun run build:playground
+      - name: Biome Check
+        run: bunx biome check
+      - name: Prepare the application
+        run:  bun run generate
+      - name: Build the playground
+        run:  bun run dev:build
+      - name: Run tsc
+        run: bun run tsc
