--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "includes": ["**", "!.nuxt", "!.output", "!logs", "!**/*.css"]
+        "includes": ["**", "!.nuxt", "!.output", "!logs", "!**/*.css", "!**/*.vue"]
     },
     "formatter": {
         "enabled": true,
