feat: add markdown styling and update project configuration
- Add comprehensive markdown.css with prose-changelog styling for both light and dark themes
- Include unbuild dependency in package.json and bun.lock
- Format biome.json includes array for better readability
- Import new markdown stylesheet in main.css

--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,14 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "includes": ["**", "!.nuxt", "!.output", "!logs", "!**/*.css", "!**/*.vue"]
+        "includes": [
+            "**",
+            "!.nuxt",
+            "!.output",
+            "!logs",
+            "!**/*.css",
+            "!**/*.vue"
+        ]
     },
     "formatter": {
         "enabled": true,
