--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
         "playground"
     ],
     "devDependencies": {
-        "@nuxt/module-builder": "1.0.2",
         "@biomejs/biome": "2.3.6",
+        "@nuxt/module-builder": "1.0.2",
         "@tailwindcss/vite": "^4.1.11",
         "@types/bun": "latest",
         "@vitejs/plugin-vue": "^6.0.1",
         "tailwindcss": "^4.1.11",
         "typescript": "^5.7.2",
+        "unbuild": "^3.6.1",
         "vite": "^7.0.6",
         "vue": "^3.5.13",
         "vue-tsc": "3.1.4"
