feat: add @nuxtjs/mdc package for markdown content handling
Add @nuxtjs/mdc dependency to enable markdown content processing with syntax highlighting. Update biome.json ignore patterns to include CSS files but remove Vue file exclusion.

--- a/biome.json
+++ b/biome.json
@@ -12,8 +12,7 @@
             "!.nuxt",
             "!.output",
             "!logs",
-            "!**/*.css",
-            "!**/*.vue"
+            "!**/*.css"
         ]
     },
     "formatter": {
