docs: add Changelogs component documentation and configuration
Add comprehensive documentation for the new Changelogs component including:
- Configuration options for changelog path in nuxt.config.ts
- Component features and usage examples
- Changelog file format with JSON frontmatter
- Testing and cache clearing instructions
- Updated package.json check command to write fixes
- Added example changelog files in playground directory

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
         "release": "bun lint && bun test && bun prepack && changelogen --release && git push --follow-tags",
         "lint": "biome format --write",
-        "check": "biome check --fix"
+        "check": "biome check --write"
     },
     "workspaces": [
         "playground"
