--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "@nuxt/kit": "4.2.1",
         "@nuxtjs/i18n": "latest",
         "@nuxtjs/mdc": "^0.18.4",
+        "gray-matter": "^4.0.3",
         "semver": "^7.7.3",
         "tailwind-merge": "^3.4.0",
         "undici": "^7.16.0"
