--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@nuxt/module-builder": "1.0.2",
         "@tailwindcss/vite": "^4.1.11",
         "@types/bun": "latest",
+        "@types/markdown-it": "^14.1.2",
         "@types/semver": "^7.7.1",
         "@vitejs/plugin-vue": "^6.0.1",
         "tailwindcss": "^4.1.11",
@@ -53,8 +54,8 @@
     "dependencies": {
         "@nuxt/kit": "4.2.1",
         "@nuxtjs/i18n": "latest",
-        "@nuxtjs/mdc": "^0.18.4",
         "gray-matter": "^4.0.3",
+        "markdown-it": "^14.1.0",
         "semver": "^7.7.3",
         "tailwind-merge": "^3.4.0",
         "undici": "^7.16.0"
