feat: add online status indicator and readiness check API

--- a/biome.json
+++ b/biome.json
@@ -13,7 +13,13 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "includes": ["**", "!.nuxt", "!.output", "!logs", "!**/*.css"]
+        "includes": [
+            "**",
+            "!.nuxt",
+            "!.output",
+            "!logs",
+            "!**/*.css"
+        ]
     },
     "formatter": {
         "enabled": true,
@@ -53,7 +59,9 @@
     },
     "overrides": [
         {
-            "includes": ["**/*.vue"],
+            "includes": [
+                "**/*.vue"
+            ],
             "linter": {
                 "rules": {
                     "correctness": {
