Set prepack install command and disable CI tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,21 @@
 name: Build & Test
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    push:
+        branches: [main]
+    pull_request:
+        branches: [main]
 
 jobs:
-  ci:
-    uses: DCC-BS/ci-workflows/.github/workflows/frontend-ci.yml@v1
-    with:
-      node_version: '24.x'
-      working_directory: '.'
-      run_biome: true
-      run_playwright: false
-      install_method: 'bun'           # 'bun' | 'npm' | 'pnpm' | 'yarn'
-      install_command: ''             # optional override; default per install_method
-      build_command: 'bun run dev:build'
-      test_command: 'bunx playwright test'
-      artifact_name: 'playwright-report'
-      artifact_retention_days: 30
+    ci:
+        uses: DCC-BS/ci-workflows/.github/workflows/frontend-ci.yml@v1
+        with:
+            node_version: "24.x"
+            working_directory: "."
+            run_biome: true
+            run_playwright: false
+            install_method: "bun" # 'bun' | 'npm' | 'pnpm' | 'yarn'
+            install_command: "bun run prepack" # optional override; default per install_method
+            build_command: "bun run dev:build"
+            test_command: ""
+            artifact_name: "playwright-report"
+            artifact_retention_days: 30
