--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,8 @@ jobs:
             run_biome: true
             run_playwright: false
             install_method: "bun" # 'bun' | 'npm' | 'pnpm' | 'yarn'
-            install_command: "bun i && bun run prepack" # optional override; default per install_method
-            build_command: "bun run dev:build"
+            install_command: "bun install" # optional override; default per install_method
+            build_command: "bun generate"
             test_command: ""
             artifact_name: "playwright-report"
             artifact_retention_days: 30
