--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,6 @@ jobs:
             version_type: ${{ inputs.version_type }}
             registry_url: https://npm.pkg.github.com
             install_command: bun install
-            build_command: bun generate
+            build_command: bun run generate
             prepack_command: bun run prepack
             publish_command: bun publish --access public
