Use bunx for prepack nuxt-module-build

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "dist"
     ],
     "scripts": {
-        "prepack": "nuxt-module-build build",
+        "prepack": "bunx nuxt-module-build build",
         "generate": "nuxi generate",
         "dev": "nuxi dev playground",
         "dev:build": "nuxi build playground",
