--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "name": "@dcc-bs/common-ui.bs.js",
     "license": "MIT",
     "type": "module",
+    "publishConfig": {
+        "access": "public"
+    },
     "exports": {
         ".": {
             "types": "./dist/types.d.mts",
