--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,4 +20,4 @@ jobs:
             install_command: bun install
             build_command: bun run generate
             prepack_command: bun run prepack
-            publish_command: npm publish
+            publish_command: npm publish --provenance
