--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "publishConfig": {
         "access": "public"
     },
+    "repository": {
+        "url": "https://github.com/DCC-BS/common-ui.bs.js"
+    },
     "exports": {
         ".": {
             "types": "./dist/types.d.mts",
