--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,9 @@
         "src/**/*.vue",
         "src/server/tsconfig.json"
     ],
-    "exclude": ["dist", "node_modules", "playground"]
+    "exclude": [
+        "dist",
+        "node_modules",
+        "playground"
+    ]
 }
