--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "vue-tsc": "^3.1.7"
     },
     "peerDependencies": {
+        "@nuxt/icon": "^2.1.0",
         "@nuxt/ui": "4.2.1",
         "motion-v": "^1.7.0",
         "nuxt": "^4.0.0",
