--- a/playground/package.json
+++ b/playground/package.json
@@ -1,11 +1,15 @@
 {
     "name": "nuxt-app",
     "dependencies": {
+        "@nuxt/icon": "^2.1.0",
         "@nuxt/ui": "4.2.1",
         "@nuxtjs/i18n": "^10.1.0",
+        "motion-v": "^1.7.0",
         "nuxt": "^4.0.3",
+        "typescript": "^5.7.2",
         "vue": "^3.5.18",
-        "vue-router": "^4.5.1"
+        "vue-router": "^4.5.1",
+        "zod": "^4.1.12"
     },
     "private": true,
     "scripts": {
