--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.1.14",
+    "version": "1.2.0",
     "name": "@dcc-bs/common-ui.bs.js",
     "license": "MIT",
     "type": "module",
@@ -15,7 +15,26 @@
             "import": "./dist/module.mjs",
             "require": "./dist/module.mjs",
             "style": "./dist/runtime/assets/main.css"
-        }
+        },
+        "./components": {
+            "types": "./dist/runtime/components/index.d.ts",
+            "import": "./dist/runtime/components/index.js"
+        },
+        "./composables": {
+            "types": "./dist/runtime/composables/index.d.ts",
+            "import": "./dist/runtime/composables/index.js"
+        },
+        "./utils": {
+            "types": "./dist/runtime/utils/index.d.ts",
+            "import": "./dist/runtime/utils/index.js"
+        },
+        "./types": {
+            "types": "./dist/runtime/types/index.d.ts",
+            "import": "./dist/runtime/types/index.js"
+        },
+        "./styles": "./dist/runtime/assets/main.css",
+        "./dist/*": "./dist/*",
+        "./runtime/*": "./dist/runtime/*"
     },
     "main": "./dist/module.mjs",
     "types": "./dist/types.d.mts",
